--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0029)https://dreambooth.github.io/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>MF-V2A</title>
+<title>ComplementaryV2A</title>
 <link href="./mffoley/style.css" rel="stylesheet">
 </head>
 
