--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </p>
 </div>
 
-<div class="content">
+<!-- <div class="content">
 <h2 style="text-align:center;"><b>Abstract</b></h2>
 <p>
     Video-to-audio (V2A) generation aims to produce high-quality audio that aligns with the content of silent videos. However, most existing methods focus primarily on the impact of a single semantic condition on audio generation, neglecting the potential of leveraging complementary features. In this paper, we propose a novel V2A framework, ComplementaryV2A, which utilizes diverse while complementary features to enhance the V2A performance. Given a silent video, our approach first extracts features with multiple pre-trained extractors, describing selected aspects of the video content. Then, these features are employed as conditions and integrated into a latent diffusion model, through our proposed complementary feature fusion module to generate the corresponding audio for silent video. Comprehensive objective and subjective experiments conducted on the benchmark dataset VGGSound demonstrate that our approach outperforms state-of-the-art methods in terms of both audio quality (e.g., FAD 0.83) and relevance to video content.
@@ -47,7 +47,7 @@
 <br>
     The structure of the proposed ComplementaryV2A framework. On the left, the overall architecture of ComplementaryV2A is illustrated, where complementary features are first extracted from the input silent video using multiple feature extractors. These features are then employed by the Complementary Feature Fusion (CFF) module to conditionally guide the LDM. The right side of the figure details the design of the CFF module, which computes cross-attention between each extracted feature and the input latent vectors, followed by a weighted averaging to produce the final output latent vectors.
 </div>
-
+ -->
 <div class="content">
 <h2 style="text-align:center;"><b>Samples</b></h2>
 
